--- a/feature/src/main/res/layout/fragment_community.xml
+++ b/feature/src/main/res/layout/fragment_community.xml
@@ -1,19 +1,57 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/community_fragment"
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/community_logo"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/community"
-        android:textSize="40sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="60dp"
+        android:background="@drawable/community_logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <!-- Flow 설정-->
+    <androidx.constraintlayout.helper.widget.Flow
+        android:id="@+id/flow_tab"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="16dp"
+        android:orientation="vertical"
+        app:constraint_referenced_ids="tabs,tabContent"
+        app:flow_verticalGap="17dp"
+        app:flow_verticalStyle="packed"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/community_logo"/>
+
+    <!-- 탭바 -->
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabs"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="6dp"
+        app:tabIndicatorColor="@color/primary_color"
+        app:tabIndicatorFullWidth="false"
+        app:tabMode="scrollable"
+        app:tabPaddingEnd="16dp"
+        app:tabPaddingStart="16dp"
+        app:tabSelectedTextColor="@color/black"
+        app:tabTextAppearance="@style/tab_text"
+        app:tabTextColor="@color/gray" />
+
+    <!--FrameLayout -->
+    <FrameLayout
+        android:id="@+id/tabContent"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"/>
+
+    <include
+        layout="@layout/progress_indicator"/>
+
+    <include
+        layout="@layout/floating_button" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
