--- a/feature/src/main/res/layout/fragment_editprofile.xml
+++ b/feature/src/main/res/layout/fragment_editprofile.xml
@@ -2,9 +2,16 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white">
+    android:layout_height="match_parent">
 
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/editprofile_logo"
+        android:layout_width="wrap_content"
+        android:layout_height="60dp"
+        android:background="@drawable/editprofile_logo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.effort.feature.core.view.CircularImageView
         android:id="@+id/circular_imageview_profile"
