--- a/feature/src/main/res/layout/fragment_home.xml
+++ b/feature/src/main/res/layout/fragment_home.xml
@@ -1,20 +1,20 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="15dp">
+    android:layout_height="match_parent">
 
     <!-- 로고 이미지 -->
     <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/iv_logo"
+        android:id="@+id/community_logo"
         android:layout_width="wrap_content"
         android:layout_height="60dp"
-        android:background="@drawable/recycrew_letter_logo"
+        android:background="@drawable/home_logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <!-- 프로필 이미지와 사용자 정보 텍스트 그룹 -->
+
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/iv_profile"
         android:layout_width="80dp"
@@ -22,11 +22,11 @@
         android:layout_marginTop="16dp"
         android:src="@drawable/thunder_home"
         app:layout_constraintBottom_toBottomOf="@+id/tv_points"
+        app:layout_constraintEnd_toStartOf="@+id/tv_username"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/iv_logo" />
+        app:layout_constraintTop_toBottomOf="@id/community_logo" />
 
     <!-- 텍스트를 위한 FlowLayout -->
-
     <androidx.constraintlayout.helper.widget.Flow
         android:id="@+id/flow_text"
         android:layout_width="0dp"
@@ -35,12 +35,9 @@
         android:orientation="vertical"
         app:constraint_referenced_ids="tv_greeting,tv_username,tv_points"
         app:flow_horizontalAlign="start"
-        app:flow_verticalAlign="top"
         app:flow_verticalGap="4dp"
-        app:layout_constraintBottom_toBottomOf="@id/iv_profile"
         app:layout_constraintStart_toEndOf="@id/iv_profile"
-        app:layout_constraintTop_toTopOf="@id/iv_profile"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="@id/iv_profile" />
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/tv_greeting"
@@ -68,7 +65,7 @@
         android:textColor="@color/gray"
         android:textSize="14sp" />
 
-    <!-- 리워드 버튼 -->
+    <!-- 어디로 이어질지 결정 버튼 -->
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_giveaway"
@@ -123,9 +120,11 @@
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="28dp"
+        android:elevation="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/search_view" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
