--- a/feature/src/main/res/layout/fragment_map.xml
+++ b/feature/src/main/res/layout/fragment_map.xml
@@ -4,16 +4,31 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/map_fragment"
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/map_logo"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/map"
-        android:textSize="40sp"
+        android:layout_height="60dp"
+        android:background="@drawable/map_logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
+    <!-- 네이버 지도 MapFragment를 포함하는 컨테이너 -->
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/map"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:navermap_locationButtonEnabled="true"/>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="30dp"
+        android:contentDescription="실행"
+        android:tint="@color/white"
+        android:src="@drawable/ic_right_arrow_24"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
