--- a/feature/src/main/res/layout/fragment_mypage.xml
+++ b/feature/src/main/res/layout/fragment_mypage.xml
@@ -2,16 +2,16 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white"
-    android:padding="16dp">
+    android:layout_height="match_parent">
 
-    <!-- Toolbar -->
-    <include
-        android:id="@+id/toolbar_mypage"
-        layout="@layout/toolbar_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/community_logo"
+        android:layout_width="wrap_content"
+        android:layout_height="60dp"
+        android:background="@drawable/mypage_logo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <!-- 프로필 이미지 -->
     <com.google.android.material.imageview.ShapeableImageView
@@ -21,7 +21,7 @@
         android:layout_marginTop="16dp"
         android:src="@drawable/profile_img_default"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/toolbar_mypage" />
+        app:layout_constraintTop_toBottomOf="@id/community_logo" />
 
     <!-- 사용자 이름 -->
     <com.google.android.material.textview.MaterialTextView
@@ -57,7 +57,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.6"
         app:layout_constraintStart_toEndOf="@id/profile_email"
-        app:layout_constraintTop_toBottomOf="@id/toolbar_mypage" />
+        app:layout_constraintTop_toBottomOf="@id/community_logo" />
 
     <!-- 구분선 -->
     <View
