--- a/feature/src/main/res/layout/fragment_map.xml
+++ b/feature/src/main/res/layout/fragment_map.xml
@@ -16,7 +16,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="30dp"
-        android:contentDescription="실행"
+        android:contentDescription="@string/play"
         android:tint="@color/white"
         android:src="@drawable/ic_right_arrow_24"
         app:layout_constraintEnd_toEndOf="parent"
