faq prototype implementation with clean architecture, toml version update

--- a/feature/src/main/res/layout/fragment_faq.xml
+++ b/feature/src/main/res/layout/fragment_faq.xml
@@ -25,6 +25,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/faq_logo" />
 
-    <include layout="@layout/progress_indicator" />
+    <include
+        android:id="@+id/progress_circular"
+        layout="@layout/progress_indicator" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
