editProfile-updateNicknameUsecase Implementation with clean architecture

--- a/feature/src/main/res/layout/fragment_editprofile.xml
+++ b/feature/src/main/res/layout/fragment_editprofile.xml
@@ -83,4 +83,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/green_button_save" />
 
+    <include
+        android:id="@+id/progress_circular"
+        layout="@layout/progress_indicator" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
