--- a/feature/src/main/res/values/colors.xml
+++ b/feature/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#909090</color>
     <color name="primary_color">#06C655</color>
+    <color name="error_color">#D3D3D3</color>
 </resources>
