Added Profile Picture Update Logic, Data Transfer Using SafeArgs: MyPage to EditProfile

--- a/feature/src/main/res/navigation/navigation_graph.xml
+++ b/feature/src/main/res/navigation/navigation_graph.xml
@@ -66,16 +66,26 @@
         android:name="com.effort.feature.mypage.detail.faq.FAQFragment"
         android:label="FAQFragment"
         tools:layout="@layout/fragment_faq" />
+
     <fragment
         android:id="@+id/editProfile_fragment"
         android:name="com.effort.feature.mypage.detail.editprofile.EditProfileFragment"
         android:label="EditProfileFragment"
-        tools:layout="@layout/fragment_editprofile"/>
+        tools:layout="@layout/fragment_editprofile">
+        <argument
+            android:name="profilePicUrl"
+            app:argType="string"
+            android:defaultValue=""/>
+        <argument
+            android:name="nickname"
+            app:argType="string"
+            android:defaultValue=""/>
+    </fragment>
 
     <fragment
         android:id="@+id/notice_fragment"
         android:name="com.effort.feature.mypage.detail.notice.NoticeFragment"
         android:label="NoticeFragment"
-        tools:layout="@layout/fragment_faq" />
+        tools:layout="@layout/fragment_notice" />
 
 </navigation>
