--- a/feature/src/main/res/layout/fragment_editprofile.xml
+++ b/feature/src/main/res/layout/fragment_editprofile.xml
@@ -68,13 +68,13 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/textview_sign_out"
+        app:layout_constraintBottom_toTopOf="@+id/sign_out"
         app:layout_constraintTop_toBottomOf="@+id/tag_edittext_nickname"
         app:layout_constraintVertical_chainStyle="packed"
         app:text="@string/save" />
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/textview_sign_out"
+        android:id="@+id/sign_out"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
