--- a/feature/src/main/res/layout/item_restaurant.xml
+++ b/feature/src/main/res/layout/item_restaurant.xml
@@ -1,35 +1,80 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="16dp">
 
     <!-- 콘텐츠 영역 Flow -->
-    <androidx.constraintlayout.helper.widget.Flow
-        android:id="@+id/flow_restaurant"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:constraint_referenced_ids="restaurant_image,restaurant_name"
-        app:flow_horizontalAlign="start"
-        app:flow_maxElementsWrap="2"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
 
     <!-- 제목과 설명 텍스트 -->
-    <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/restaurant_image"
-        android:layout_width="50dp"
-        android:layout_height="50dp"/>
 
-    <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/restaurant_name"
+    <androidx.constraintlayout.helper.widget.Flow
+        android:id="@+id/flow_restaurant"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@id/restaurant_image"
-        android:text="@string/title" />
+        app:constraint_referenced_ids="name, distance, roadName_address, phone_number, lotNumber_address, place_url"
+        app:flow_maxElementsWrap="2"
+        app:flow_wrapMode="chain"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/title"
+        app:layout_constraintStart_toStartOf="@id/flow_restaurant"
+        app:layout_constraintTop_toTopOf="@id/flow_restaurant" />
+
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/distance"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingStart="@dimen/spacing_name_to_distance"
+        android:text="@string/distance"
+        android:textColor="@color/primary_color"
+        app:layout_constraintStart_toEndOf="@id/name"
+        app:layout_constraintTop_toTopOf="@id/flow_restaurant" />
+
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/lotNumber_address"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/lotNumber_address"
+        android:textColor="@color/gray"
+        app:layout_constraintTop_toBottomOf="@id/roadName_address"
+        app:layout_constraintStart_toStartOf="@id/flow_restaurant"/>
+
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/roadName_address"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/roadName_address"
+        app:layout_constraintStart_toStartOf="@id/flow_restaurant"
+        app:layout_constraintTop_toBottomOf="@id/name" />
+
+
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/phone_number"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/phone_number"
+        app:layout_constraintEnd_toEndOf="@id/flow_restaurant"
+        app:layout_constraintTop_toTopOf="@id/flow_restaurant"
+        app:layout_constraintBottom_toTopOf="@id/place_url"/>
+
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/place_url"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/place_url"
+        app:layout_constraintBottom_toBottomOf="@+id/flow_restaurant"
+        app:layout_constraintEnd_toEndOf="@id/flow_restaurant"/>
+
 
     <!-- 구분선 -->
     <View
