--- a/feature/src/main/res/values/dimens.xml
+++ b/feature/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="subtitle_text_size">14sp</dimen>
     <dimen name="title_text_size">18sp</dimen>
+    <dimen name="spacing_name_to_distance">12dp</dimen>
 </resources>
