Implement fetching a parking lot list using an API (JSON format) and storing it in RoomDB, as well as integrating a weather retrieval feature based on the OpenWeatherAPI.

--- a/feature/src/main/res/navigation/navigation_graph.xml
+++ b/feature/src/main/res/navigation/navigation_graph.xml
@@ -129,6 +129,14 @@
             android:name="placeUrl"
             app:argType="string" />
 
+        <argument
+            android:name="latitude"
+            app:argType="string" />
+
+        <argument
+            android:name="longitude"
+            app:argType="string" />
+
         <action
             android:id="@+id/action_restaurantDetailFragment_to_restaurantInfoFragment"
             app:destination="@id/restaurantInfoFragment" />
