--- a/feature/src/main/res/layout/fragment_restaurant.xml
+++ b/feature/src/main/res/layout/fragment_restaurant.xml
@@ -6,10 +6,10 @@
     android:layout_height="match_parent">
 
     <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/notice_logo"
+        android:id="@+id/restaurant_logo"
         android:layout_width="wrap_content"
         android:layout_height="60dp"
-        android:background="@drawable/notice_logo"
+        android:background="@drawable/restaurant_logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -23,7 +23,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/notice_logo"/>
+        app:layout_constraintTop_toBottomOf="@id/restaurant_logo"/>
 
     <include
         android:id="@+id/progress_circular"
