--- a/feature/src/main/res/layout/fragment_map.xml
+++ b/feature/src/main/res/layout/fragment_map.xml
@@ -9,8 +9,26 @@
         android:id="@+id/map"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:navermap_locationButtonEnabled="true"/>
+        app:navermap_locationButtonEnabled="true"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
+    <!-- 필터 RecyclerView -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView_filter"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:clipToPadding="false"
+        android:background="@android:color/transparent"
+        android:padding="8dp"
+        android:overScrollMode="never"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <!-- 플로팅 액션 버튼 -->
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
@@ -18,8 +36,13 @@
         android:layout_margin="30dp"
         android:contentDescription="@string/play"
         android:tint="@color/white"
-        android:src="@drawable/ic_right_arrow_24"
+        android:src="@drawable/ic_baseline_add_24"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintBottom_toBottomOf="parent" />
+
+    <!-- 프로그레스 인디케이터 -->
+    <include
+        android:id="@+id/progress_circular"
+        layout="@layout/progress_indicator" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
