--- a/feature/src/main/res/layout/fragment_home.xml
+++ b/feature/src/main/res/layout/fragment_home.xml
@@ -70,13 +70,13 @@
     <!-- 어디로 이어질지 결정 버튼 -->
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_giveaway"
+        android:id="@+id/btn_map"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
         android:background="@drawable/green_bubble"
         android:gravity="center"
-        android:text="@string/display_giveaway"
+        android:text="@string/btn_map"
         android:textColor="@color/white"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -94,7 +94,7 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btn_giveaway" />
+        app:layout_constraintTop_toBottomOf="@id/btn_map" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/search_view"
@@ -110,7 +110,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_category_info">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/TextInputEditText"
+            android:id="@+id/search_keyword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/search_text"
@@ -119,7 +119,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view"
+        android:id="@+id/recyclerview_category"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:elevation="20dp"
@@ -134,6 +134,5 @@
     <include
         android:id="@+id/progress_circular"
         layout="@layout/progress_indicator" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
