Favorites Feature Implementation: Firestore Integration and Real-Time UI Updates

--- a/feature/src/main/res/layout/fragment_mypage.xml
+++ b/feature/src/main/res/layout/fragment_mypage.xml
@@ -89,6 +89,7 @@
         android:layout_height="wrap_content"
         android:clickable="true"
         android:drawableEnd="@drawable/ic_right_arrow_24"
+        android:focusable="true"
         android:paddingVertical="8dp"
         android:text="@string/faq"
         app:layout_constraintEnd_toEndOf="parent"
@@ -102,6 +103,7 @@
         android:layout_height="wrap_content"
         android:clickable="true"
         android:drawableEnd="@drawable/ic_right_arrow_24"
+        android:focusable="true"
         android:paddingVertical="8dp"
         android:text="@string/notice"
         app:layout_constraintEnd_toEndOf="parent"
