--- a/feature/src/main/res/layout/fragment_restaurant_detail.xml
+++ b/feature/src/main/res/layout/fragment_restaurant_detail.xml
@@ -12,6 +12,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <!-- 하트 버튼 추가 -->
+    <androidx.appcompat.widget.AppCompatImageButton
+        android:id="@+id/favorite_button"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:background="@android:color/transparent"
+        android:clickable="true"
+        android:contentDescription="@string/favorite"
+        android:focusable="true"
+        android:src="@drawable/ic_heart_empty_24"
+        app:layout_constraintEnd_toEndOf="@id/restaurant_images"
+        app:layout_constraintTop_toTopOf="@id/restaurant_images" />
+
     <androidx.constraintlayout.helper.widget.Flow
         android:id="@+id/restaurant_description"
         android:layout_width="match_parent"
@@ -80,9 +93,9 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:orientation="vertical"
-        app:flow_verticalStyle="packed"
-        app:flow_verticalGap="17dp"
         app:constraint_referenced_ids="tabs,tab_content"
+        app:flow_verticalGap="17dp"
+        app:flow_verticalStyle="packed"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -106,9 +119,7 @@
         android:id="@+id/tab_content"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/tabs"
-        app:layout_constraintBottom_toBottomOf="parent" />
-
-    <!-- 혼잡도, 대기시간, 주차정보  추가 이거는 다른 탭에 들어가야할듯 info 탭 -->
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tabs" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
