--- a/feature/src/main/res/layout/item_restaurant.xml
+++ b/feature/src/main/res/layout/item_restaurant.xml
@@ -1,14 +1,10 @@
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="16dp">
 
     <!-- 콘텐츠 영역 Flow -->
-
-    <!-- 제목과 설명 텍스트 -->
-
     <androidx.constraintlayout.helper.widget.Flow
         android:id="@+id/flow_restaurant"
         android:layout_width="match_parent"
@@ -45,8 +41,8 @@
         android:layout_height="wrap_content"
         android:text="@string/lotNumber_address"
         android:textColor="@color/gray"
-        app:layout_constraintTop_toBottomOf="@id/roadName_address"
-        app:layout_constraintStart_toStartOf="@id/flow_restaurant"/>
+        app:layout_constraintStart_toStartOf="@id/flow_restaurant"
+        app:layout_constraintTop_toBottomOf="@id/roadName_address" />
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/roadName_address"
@@ -56,15 +52,14 @@
         app:layout_constraintStart_toStartOf="@id/flow_restaurant"
         app:layout_constraintTop_toBottomOf="@id/name" />
 
-
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/phone_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/phone_number"
+        app:layout_constraintBottom_toTopOf="@id/place_url"
         app:layout_constraintEnd_toEndOf="@id/flow_restaurant"
-        app:layout_constraintTop_toTopOf="@id/flow_restaurant"
-        app:layout_constraintBottom_toTopOf="@id/place_url"/>
+        app:layout_constraintTop_toTopOf="@id/flow_restaurant" />
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/place_url"
@@ -72,8 +67,7 @@
         android:layout_height="wrap_content"
         android:text="@string/place_url"
         app:layout_constraintBottom_toBottomOf="@+id/flow_restaurant"
-        app:layout_constraintEnd_toEndOf="@id/flow_restaurant"/>
-
+        app:layout_constraintEnd_toEndOf="@id/flow_restaurant" />
 
     <!-- 구분선 -->
     <View
@@ -81,8 +75,8 @@
         android:layout_width="0dp"
         android:layout_height="1dp"
         android:background="#CCCCCC"
-        app:layout_constraintTop_toBottomOf="@id/flow_restaurant"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/flow_restaurant" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
