--- a/feature/src/main/res/menu/menu_bottom_nav.xml
+++ b/feature/src/main/res/menu/menu_bottom_nav.xml
@@ -6,6 +6,11 @@
         android:title="@string/home" />
 
     <item
+        android:id="@+id/favorite_fragment"
+        android:icon="@drawable/ic_heart_filled_bottom_24"
+        android:title="@string/favorite" />
+
+    <item
         android:id="@+id/map_fragment"
         android:icon="@drawable/ic_map_24"
         android:title="@string/map" />
