Provide nearby subway information, refactor code (remove duplicates), improve UI

--- a/feature/src/main/res/layout/fragment_restaurant_review.xml
+++ b/feature/src/main/res/layout/fragment_restaurant_review.xml
@@ -5,15 +5,28 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/review_description"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingEnd="20dp"
+        android:paddingBottom="5dp"
+        android:text="@string/review_description"
+        app:layout_constraintBottom_toTopOf="@id/flow_bottom_edittext"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.constraintlayout.helper.widget.Flow
         android:id="@+id/flow_bottom_edittext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="1dp"
         android:background="@color/primary_color"
         app:constraint_referenced_ids="send_file,edittext_msg,send_msg"
         app:flow_maxElementsWrap="3"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/review_description" />
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/send_file"
