--- a/feature/src/main/res/layout/fragment_restaurant_surrounding.xml
+++ b/feature/src/main/res/layout/fragment_restaurant_surrounding.xml
@@ -4,24 +4,74 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/weather_description"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingStart="15dp"
+        android:paddingEnd="20dp"
+        android:paddingBottom="5dp"
+        android:text="@string/weather_description"
+        app:layout_constraintBottom_toTopOf="@id/recyclerview_weather"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_left"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="15dp" />
+
+    <View
+        android:id="@+id/divider_weather"
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:background="@color/black"
+        app:layout_constraintEnd_toEndOf="@id/weather_description"
+        app:layout_constraintStart_toStartOf="@id/guideline_left"
+        app:layout_constraintTop_toBottomOf="@id/weather_description" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview_weather"
         android:layout_width="match_parent"
         android:layout_height="140dp"
         android:clipChildren="false"
         android:clipToPadding="false"
-        app:layoutManager="com.google.android.material.carousel.CarouselLayoutManager"
         app:carousel_alignment="center"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layoutManager="com.google.android.material.carousel.CarouselLayoutManager"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/weather_description" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/subway_description"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingStart="15dp"
+        android:paddingEnd="20dp"
+        android:paddingBottom="5dp"
+        android:text="@string/subway_description"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/recyclerview_weather" />
+
+    <View
+        android:id="@+id/divider_subway"
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:background="@color/black"
+        app:layout_constraintEnd_toEndOf="@id/weather_description"
+        app:layout_constraintStart_toStartOf="@id/guideline_left"
+        app:layout_constraintTop_toBottomOf="@id/subway_description" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerview_parkingLot"
+        android:id="@+id/recyclerview_subway"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/recyclerview_weather"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/subway_description" />
 
     <include
         android:id="@+id/progress_circular"
