--- a/feature/src/main/res/layout/item_blog_review.xml
+++ b/feature/src/main/res/layout/item_blog_review.xml
@@ -1,46 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="16dp">
 
+    <androidx.constraintlayout.helper.widget.Flow
+        android:id="@+id/flow_blog_review"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:constraint_referenced_ids="blog_title, blog_contents, blog_dateTime"
+        app:flow_horizontalBias="0.0"
+        app:flow_maxElementsWrap="1"
+        app:flow_wrapMode="chain"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/title"
+        android:id="@+id/blog_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:ellipsize="end"
+        android:maxLines="1"
         android:textAppearance="?attr/textAppearanceHeadline6"
         android:textColor="@color/black"
-        android:maxLines="1"
-        android:ellipsize="end"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:text="블로그 글 제목" />
 
     <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/contents"
+        android:id="@+id/blog_contents"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textAppearance="?attr/textAppearanceBody2"
         android:ellipsize="end"
-        android:maxLines="3"
         android:lineSpacingExtra="4dp"
-        app:layout_constraintTop_toBottomOf="@id/title"
-        app:layout_constraintStart_toStartOf="parent"
+        android:maxLines="3"
+        android:textAppearance="?attr/textAppearanceBody2"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/blog_title"
         tools:text="블로그 글 요약 내용이 여기에 표시됩니다. 요약 내용이 길 경우 말줄임표가 적용됩니다." />
 
     <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/dateTime"
+        android:id="@+id/blog_dateTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?attr/textAppearanceCaption"
         android:textColor="@color/gray"
-        app:layout_constraintTop_toBottomOf="@id/contents"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/blog_contents"
         tools:text="2024-01-05" />
+
+    <!-- 구분선 -->
+    <View
+        android:id="@+id/divider"
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:background="#CCCCCC"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/flow_blog_review" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
