--- a/feature/src/main/res/layout/activity_main.xml
+++ b/feature/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
 
     <!-- FragmentContainerView 설정 -->
     <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/nav_host_fragment_container"
+        android:id="@+id/fragment_container"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -25,7 +25,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/nav_host_fragment_container"
+        app:layout_constraintTop_toBottomOf="@id/fragment_container"
         app:backgroundTint="@color/primary_color"
         app:itemTextColor="@drawable/bottom_click_color"
         app:itemIconTint="@drawable/bottom_click_color"
