--- a/feature/src/main/res/values/colors.xml
+++ b/feature/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="gray">#909090</color>
     <color name="primary_color">#FF8578</color>
     <color name="error_color">#D3D3D3</color>
+    <color name="muted_purple">#725FAA</color>
 </resources>
