--- a/feature/src/main/res/layout/fragment_home.xml
+++ b/feature/src/main/res/layout/fragment_home.xml
@@ -20,8 +20,10 @@
         android:id="@+id/iv_profile"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_marginTop="16dp"
-        android:src="@drawable/thunder_home"
+        android:layout_marginTop="24dp"
+        android:src="@drawable/spoonchop_home"
+        android:scaleType="centerCrop"
+        app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintBottom_toBottomOf="@+id/tv_points"
         app:layout_constraintEnd_toStartOf="@+id/user_name"
         app:layout_constraintStart_toStartOf="parent"
